fix the problem with invisible input on iOS Messenger App

--- a/src/sass/Search.scss
+++ b/src/sass/Search.scss
@@ -14,7 +14,9 @@
     border: none;
     width: 100%;
     height: 35px;
+    -webkit-box-shadow: 0 0 4px black;
     box-shadow: 0 0 4px black;
+    border-radius: 1px;
     font-size: 1rem;
     appearance: none;
     &:focus {
